Added parameters for vacancy list
