# app/src/main/java/com/remicartier/newisland/controller/VacancyController.java
@@ -5,6 +5,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 
 import java.time.LocalDate;
@@ -24,7 +25,7 @@ public class VacancyController {
 
     @GetMapping(path = "/vacancy", produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseBody
-    public List<LocalDate> getVacancy() {
-        return reservationService.getVacancy();
+    public List<LocalDate> getVacancy(@RequestParam(required = false) LocalDate startDate, @RequestParam(required = false) LocalDate endDate) {
+        return reservationService.getVacancy(startDate, endDate);
     }
 }
